clusters/main/kubernetes/apps/librespeed/app/namespace.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/namespace_v1.json
apiVersion: v1
kind: Namespace
metadata:
  name: librespeed
  annotations:
    volsync.backube/privileged-movers: "true"
